# nitro_ecosystem

./: .gitignore  CHANGELOG.md  IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  LIMITATIONS.md  NITRO_ECOSYSTEM_PLAN.md  PERFORMANCE_ANALYSIS.md  PLATFORM_EXPANSION_PLAN.md  README.md  RN_NITRO_COMPARISON.md  SKILLS.md  V1_PLAN.md  correct_type_gen_plan.md  cross.md  new_plan.md  plan.md  plan_v2_extensions.md  publish.sh  pubspec.yaml
.dart_skills/: skills_config.json
.github/workflows/: ci_benchmark.yml  ci_desktop.yml  ci_generator.yml
benchmark/: .clangd  FlutterFramework  README.md  ffigen.yaml  pubspec.yaml
benchmark/android/: build.gradle
benchmark/android/src/main/: AndroidManifest.xml
benchmark/example/: README.md  pubspec.yaml
benchmark/example/android/app/: build.gradle.kts
benchmark/example/assets/baselines/: README.md  macos.json
benchmark/example/integration_test/: benchmark_regression_test.dart
benchmark/example/ios/Runner/: Info.plist
benchmark/example/ios/Runner.xcodeproj/: project.pbxproj
benchmark/example/lib/: benchmark_page.dart  box_stress_page.dart  main.dart  multi_bridge_dashboard.dart  nitro_init.dart  nitro_init_native.dart
benchmark/example/lib/controllers/: benchmark_controller.dart  raw_ffi_service.dart  raw_ffi_service_native.dart  visual_benchmark_controller.dart
benchmark/example/lib/harness/: bench_harness.dart
benchmark/example/lib/models/: benchmark_bridge.dart  benchmark_history.dart
benchmark/example/lib/widgets/: benchmark_chart.dart  benchmark_controls.dart  benchmark_history.dart  iteration_selector.dart  runs_selector.dart  status_card.dart
benchmark/example/linux/: CMakeLists.txt
benchmark/example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
benchmark/example/linux/runner/: my_application.cc
benchmark/example/src/: CMakeLists.txt  dart_api_dl.c
benchmark/example/test_driver/: integration_test.dart
benchmark/example/web/: index.html  manifest.json
benchmark/example/windows/: CMakeLists.txt
benchmark/example/windows/runner/: Runner.rc  (+1 more)
benchmark/ios/: Package.swift  benchmark.podspec
benchmark/ios/Classes/: BenchmarkImpl.swift  HybridBenchmarkCpp.cpp  SwiftBenchmarkPlugin.swift  benchmark.bridge.g.h  benchmark.bridge.g.mm  benchmark.bridge.g.swift  benchmark.cpp  benchmark_cpp.bridge.g.h  benchmark_cpp.bridge.g.mm  benchmark_cpp.bridge.g.swift  nitro_ar.bridge.g.swift
benchmark/ios/benchmark/: Package.swift
benchmark/lib/: benchmark.dart  benchmark_bindings_generated.dart
benchmark/lib/src/: benchmark.g.dart  benchmark.native.dart  benchmark_cpp.g.dart  benchmark_cpp.native.dart  benchmark_web.dart  benchmark_web_plugin.dart  nitro_ar.g.dart  nitro_ar.native.dart
benchmark/linux/: CMakeLists.txt  benchmark_plugin.cc
benchmark/linux/include/benchmark/: benchmark_plugin.h
benchmark/macos/: Package.swift  benchmark.podspec
benchmark/macos/Classes/: BenchmarkImpl.swift  BenchmarkPlugin.swift  benchmark.bridge.g.mm  benchmark.bridge.g.swift  benchmark.c  benchmark_cpp.bridge.g.h  benchmark_cpp.bridge.g.swift  nitro_ar.bridge.g.swift
benchmark/macos/benchmark/: Package.swift
benchmark/src/: CMakeLists.txt  HybridBenchmark.cpp  HybridBenchmarkCpp.cpp  benchmark.c  benchmark.cpp  benchmark.h  dart_api_dl.c  nitro_workload.h
benchmark/tool/: bench.sh  format_report.dart  probe_desktop.dart
benchmark/windows/: CMakeLists.txt  benchmark_plugin.cpp  benchmark_plugin.h  benchmark_plugin_c_api.cpp
benchmark/windows/include/benchmark/: benchmark_plugin_c_api.h
benchmark/windows/src/: HybridBenchmark.cpp  HybridBenchmarkCpp.cpp
doc/: consuming.md  getting-started.md  improvement_plan.md  lifecycle.md  publishing.md  swift-type-mapping.md
doc/advanced/: async.md  cpp_testing.md  memory_management.md  native_handle.md
doc/migration/: 0.2-to-0.3.md
docs/: consuming.md  getting-started.md  lifecycle.md  swift-type-mapping.md
my_camera/: .clangd  CHANGELOG.md  CMakeLists.txt  README.md  ffigen.yaml  pubspec.yaml
my_camera/android/: build.gradle
my_camera/example/: README.md  pubspec.yaml
my_camera/example/lib/: main.dart
my_camera/example_verifier/: README.md  pubspec.yaml
my_camera/example_verifier/lib/: main.dart
my_camera/example_verifier/test/: widget_test.dart
my_camera/ios/: Package.swift  my_camera.podspec
my_camera/ios/Classes/: MyCameraImpl.swift  SwiftMyCameraPlugin.swift  VerificationImpl.swift  complex.bridge.g.cpp  complex.bridge.g.h  complex.bridge.g.mm  complex.bridge.g.swift  dart_api_dl.c  my_camera.bridge.g.cpp  my_camera.bridge.g.h  my_camera.bridge.g.mm  my_camera.bridge.g.swift  my_camera.c  my_camera.cpp  nitro.h  nitro_camera.bridge.g.h  nitro_camera.bridge.g.swift  verification.bridge.g.cpp  verification.bridge.g.h  verification.bridge.g.mm  verification.bridge.g.swift
my_camera/ios/my_camera/: Package.swift
my_camera/lib/: my_camera.dart  my_camera_bindings_generated.dart
my_camera/lib/src/: complex.g.dart  complex.native.dart  math.g.dart  math.native.dart  my_camera.g.dart  my_camera.native.dart  nitro_camera.g.dart  nitro_camera.native.dart  verification.g.dart  verification.native.dart
my_camera/src/: CMakeLists.txt  dart_api_dl.c  math_impl.hpp  my_camera.cpp  nitro.h
my_camera/test/: smoke_test.dart
nitro_battery/: README.md  ffigen.yaml  pubspec.yaml
nitro_battery/android/: build.gradle  settings.gradle
nitro_battery/example/: README.md  pubspec.yaml
nitro_battery/example/lib/: main.dart
nitro_battery/ios/: Package.swift  nitro_battery.podspec
nitro_battery/ios/Classes/: NitroBatteryImpl.swift  dart_api_dl.c  dart_api_dl.cpp  nitro_battery.bridge.g.h  nitro_battery.bridge.g.mm  nitro_battery.bridge.g.swift  nitro_battery.c  nitro_battery.cpp
nitro_battery/ios/nitro_battery/: Package.swift
nitro_battery/lib/: nitro_battery.dart  nitro_battery_bindings_generated.dart
nitro_battery/lib/src/: nitro_battery.g.dart  nitro_battery.native.dart
nitro_battery/src/: CMakeLists.txt  dart_api_dl.c  nitro.h  nitro_battery.c  nitro_battery.cpp
scripts/: recreate_testing_project.sh  verify_local.sh
(+99 files in other folders)
